# fast-options-pricer

./: .gitignore  CMakeLists.txt
benchmarks/: CMakeLists.txt  README.md  bench_baseline.cpp
scripts/: build.sh  configure.sh  full_build.sh  run_benchmarks.sh
src/legacy/: option_data.hpp  test_fdm.cpp  test_mc.cpp
